--- a/notebook/config/model.yaml
+++ b/notebook/config/model.yaml
@@ -4,14 +4,30 @@ grid_search:
   params:
     cv: 3
     verbose: 1
+    
 model_selection:
   module_0:
-    class: ModelClassName
-    module: module_of_model
+    class: LinearRegression
+    module: sklearn.linear_model
     params:
-      param_name1: value1
-      param_name2: value2
+      fit_intercept: True
     search_param_grid:
-      param_name:
-      - param_value_1
-      - param_value_2
+      fit_intercept:
+      - True
+      - False
+
+  module_1:
+    class: RandomForestRegressor
+    module: sklearn.ensemble
+    params:
+      n_estimators: 40
+      min_samples_leaf: 2
+    search_param_grid:
+      min_samples_leaf:
+      - 2
+      - 4
+      - 6
+      n_estimators:
+      - 50
+      - 100
+      - 80
