--- a/config/model.yaml
+++ b/config/model.yaml
@@ -25,19 +25,19 @@ model_selection:
     search_param_grid:
       min_samples_leaf:
       - 2
-      - 4
-      - 6
-      n_estimators:
-      - 50
-      - 100
-      - 80
-      bootstrap:
-      - True
-      - False
-      oob_score:
-      - True
-      - False
-      max_depth:
-      - 2
-      - 4
-      - 6
+      # - 4
+      # - 6
+      # n_estimators:
+      # - 50
+      # - 100
+      # - 80
+      # bootstrap:
+      # - True
+      # - False
+      # oob_score:
+      # - True
+      # - False
+      # max_depth:
+      # - 2
+      # - 4
+      # - 6
